# FakeTimer

./: CMakeLists.txt
cmake/: FakeTimerConfig.cmake.in
include/faketimer/: faketimer.h
src/: faketimer.cpp
